2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: further work on the dialog.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpstroke-new.[ch]: formatting.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am: renamed files:

	* app/plug-in/plug-in-error.[ch]: old names
	* app/plug-in/gimppluginerror.[ch]: new names

	* app/plug-in/plug-in-icc-profile.c
	* app/file/file-open.c: changed accordingly.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: factored out code to a utility function.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: don't open the destination profile twice.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_icc_apply): if the image has a
	selection, save it, unset it and restore it after the conversion.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c
	* plug-ins/common/tiff-load.c
	* plug-ins/jpeg/jpeg-load.c: made the icc-profile undoable and
	persistent.
	
	* devel-docs/parasites.txt: document this.

	* plug-ins/common/lcms.c: made colorspace conversion undoable.
	
	* app/file/file-open.c: disable undo while doing the colorspace
	conversion on load.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbaseenums.[ch]
	* libgimpbase/gimpenv.[ch]: changed enum GimpUserDirectory and API
	of gimp_user_directory() so that g_get_user_special_dir() can be
	used instead as soon as we depend on GLib 2.14.

	* tools/pdbgen/enums.pl: regenerated.

	* app/widgets/gimpfiledialog.c
	* plug-ins/pygimp/gimpmodule.c: changed accordingly.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added "<Image>/Image/Mode/Color Profile"
	as a placeholder below the Image Mode radio items.

	* plug-ins/common/lcms.c (query): register menu entries to assign
	and apply color profiles. Dialog implementation is still missing...

2007-08-11  Martin Nordholts  <martinn@svn.gnome.org>
