@@ -309,20 +309,6 @@ static const GimpEnumActionEntry tools_foreground_select_brush_size_actions[] =
     NULL },
 };
 
-static const GimpToggleActionEntry tools_rectangle_toggle_actions[] =
-{
-  { "tools-rectangle-toggle-fixed-aspect", GIMP_STOCK_TOOL_RECT_SELECT,
-    N_("Toggle Fixed-Aspect Option for Rectangle"), NULL, NULL,
-    G_CALLBACK (tools_rectangle_toggle_fixed_aspect),
-    TRUE,
-    NULL},
-  { "tools-rectangle-toggle-fixed-center", GIMP_STOCK_TOOL_RECT_SELECT,
-    N_("Toggle Expand-From-Center Option for Rectangle"), NULL, NULL,
-    G_CALLBACK (tools_rectangle_toggle_fixed_center),
-    TRUE,
-    NULL}
-};
-
 static const GimpEnumActionEntry tools_value_1_actions[] =
 {
   { "tools-value-1-set", GIMP_STOCK_TOOL_OPTIONS,
@@ -550,10 +536,6 @@ tools_actions_setup (GimpActionGroup *group)
                                       tools_foreground_select_brush_size_actions,
                                       G_N_ELEMENTS (tools_foreground_select_brush_size_actions),
                                       G_CALLBACK (tools_fg_select_brush_size_cmd_callback));
-
-  gimp_action_group_add_toggle_actions (group,
-                                        tools_rectangle_toggle_actions,
-                                        G_N_ELEMENTS (tools_rectangle_toggle_actions));
 
   gimp_action_group_add_enum_actions (group,
                                       tools_value_1_actions,
