@@ -1,3 +1,9 @@
+2007-08-11  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/tools-actions.c
+	* app/actions/tools-commands.[ch]: removed unused rectangle tool
+	actions.
+
 2007-08-11  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/lcms.c: further work on the dialog.
